add second episod

--- a/#2 - Programmation Objet et Fonctionnelle/2_Programmation_Objet_et_Fonctionelle.ipynb
+++ b/#2 - Programmation Objet et Fonctionnelle/2_Programmation_Objet_et_Fonctionelle.ipynb
@@ -54,26 +54,43 @@
       "metadata": {
         "id": "oDgyvf_ghmMq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "26f97174-a439-47d6-af0c-09c1a5c44471"
       },
       "source": [
-        ""
+        "def exemple_porte_variable(exemple): #https://www.python.org/dev/peps/pep-0008/ #global and nonlocal\n",
+        "  print(exemple)\n",
+        "\n",
+        "  def function1(exemple):\n",
+        "    print(exemple)\n",
+        "  \n",
+        "  def function2():\n",
+        "    nonlocal exemple\n",
+        "    print(exemple)\n",
+        "  \n",
+        "  function1('Earth')\n",
+        "  function2()\n",
+        "\n",
+        "exemple = 'Soleil'\n",
+        "\n",
+        "exemple_porte_variable(exemple)\n",
+        "#function1(exemple1) #ERROR"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Wfzm-88IjU4k",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Soleil\n",
+            "Earth\n",
+            "Soleil\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -94,29 +111,136 @@
       "metadata": {
         "id": "Pg2h4bUAhmjO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "2895a47d-d2c3-4fbf-c86c-2c918a7c9d3f"
       },
       "source": [
-        "planet_list= ['Soleil','Mercure','Vénus','Terre','Mars','Jupiter','Saturne','Uranus','Neptune','Pluton']\n",
+        "planet_list= ['Mercure','Vénus','Terre','Mars','Jupiter','Saturne','Uranus','Neptune','Pluton']\n",
         "\n",
-        "diametre_planet_list =['1391','4880','12 104','12756','6805','142984','120536','51312','49922','2300']\n",
+        "diametre_planet_list =[1391, 4880, 12104, 12756, 6805, 142984, 120536, 51312, 49922, 2300]\n",
         "\n",
         "distance_soleil_planet = ['58','108','150','227','778','457','870','500','900']\n",
-        "\n"
+        "\n",
+        "dictionnaire_list ={\n",
+        "    'Mercure':{ 'diametre':'1391',\n",
+        "              'distance':'58'\n",
+        "            },\n",
+        "            'Venus':{ 'diametre':'4880',\n",
+        "              'distance':'108'\n",
+        "            },\n",
+        "            'Terre':{ 'diametre':'12104',\n",
+        "              'distance':'150'\n",
+        "            }\n",
+        "    }\n",
+        "\n",
+        "def find_little_planet(planet_list,diametre_planet_list):\n",
+        "  name_the_most_little_planet = ''\n",
+        "  diameter_of_the_most_little_planet = 99999999999999999\n",
+        "\n",
+        "  for i,planet_diametre in enumerate(diametre_planet_list):\n",
+        "    print(planet_diametre)\n",
+        "    if planet_diametre < diameter_of_the_most_little_planet:\n",
+        "      diameter_of_the_most_little_planet= planet_diametre\n",
+        "      name_of_the_most_little_planet =planet_list[i]\n",
+        "\n",
+        "    return diameter_of_the_most_little_planet,name_of_the_most_little_planet\n",
+        "\n",
+        "\n",
+        "diameter_of_the_most_little_planet,name_of_the_most_little_planet = find_little_planet(planet_list,diametre_planet_list)\n",
+        "print(f'The most little planet is {name_of_the_most_little_planet} \\\n",
+        "      of diameter {diameter_of_the_most_little_planet} km') #f-string 'chaine de caractère {VARIABLE}'"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1391\n",
+            "The most little planet is Mercure       of diameter 1391 km\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FOEoTAmH47tk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "993bb57d-a6fc-4fe6-95c8-64d541fe8066"
+      },
+      "source": [
+        "def funct(num):\n",
+        "  num = num + 1\n",
+        "  return num\n",
+        "\n",
+        "my_new_number = funct(4)\n",
+        "my_new_number"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wi6X_8fy3H9l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "62daa1a1-1efe-4a12-bcff-46aa9d0b686c"
+      },
+      "source": [
+        "a = [1,2,3,4] # ['0','1','2','3']\n",
+        "a[2],a[0]"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "II9HFLtHmhNr",
         "colab_type": "code",
+        "outputId": "2f517190-edb4-4732-8680-220db2107ac6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 636
-        },
-        "outputId": "2f517190-edb4-4732-8680-220db2107ac6"
+        }
       },
       "source": [
         "#https://stackoverflow.com/questions/34560620/how-do-i-plot-a-planets-orbit-as-a-function-of-time-on-an-already-plotted-ellip\n",
@@ -192,7 +316,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -210,19 +334,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_fVGu4BCoqO6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cWnZbqWchmrs",
@@ -230,6 +341,49 @@
       },
       "source": [
         "# Programmation Objet"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jHHM2v_N5pyr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "15b9421b-5b4c-4c12-b21c-0835b50f0521"
+      },
+      "source": [
+        "class Planet():\n",
+        "  def __init__(self, diametre, distance_au_soleil,name):\n",
+        "    self.diametre = diametre #attribut\n",
+        "    self.distance_au_soleil = distance_au_soleil\n",
+        "    self.name = name \n",
+        "\n",
+        "  def get_description(self): #methode\n",
+        "    print(f\"Il s'agit de {self.name} qui a un diametre de {self.diametre} km \\\n",
+        "    et une distance au soleil de {self.distance_au_soleil} Millions de km.\")\n",
+        "\n",
+        "Earth = Planet(12104,150, 'Earth')\n",
+        "Mars = Planet(12756,227, 'Mars')\n",
+        "\n",
+        "Earth.get_description()\n",
+        "\n",
+        "Earth.distance_au_soleil = 228\n",
+        "\n",
+        "Earth.get_description()"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Il s'agit de Earth qui a un diametre de 12104km     et une distance au soleil de 150 Millions de km.\n",
+            "Il s'agit de Earth qui a un diametre de 12104km     et une distance au soleil de 228 Millions de km.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
