--- a/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
+++ b/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
@@ -59,28 +59,34 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 202
         },
-        "outputId": "41896ce1-36ae-45a0-e17a-88a1596e6dc9"
+        "outputId": "eba6d6c3-ba85-4215-9475-a140f4a034b2"
       },
       "source": [
         "## definir un attribut privé : __ATTRIBUT\n",
+        "class Animal:\n",
         "\n",
-        "\n"
+        "    def __init__(self,race):\n",
+        "        self.__race = race\n",
+        "\n",
+        "\n",
+        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
+        "\n",
+        "print(toto_le_lion.__race)"
       ],
-      "execution_count": 11,
+      "execution_count": 55,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<__main__.Person at 0x7fb962f1a6a0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-2e8288b93348>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtoto_le_lion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Lion'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Lion est une instance de ma classe Animal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoto_le_lion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__race\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Animal' object has no attribute '__race'"
+          ]
         }
       ]
     },
@@ -91,21 +97,75 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "fd5fe869-f906-45a4-9031-61dad93a9b78"
+        "outputId": "269edbb1-4556-4a36-a423-56014bdef94c"
       },
       "source": [
-        "## Bonne pratique (coucou Java) définir des setteurs et getteurs : set_attribut(self,attribut)\n",
+        "## Bonne pratique (coucou Java) définir des setteurs: get_attribut(self,attribut)\n",
+        "class Animal:\n",
         "\n",
-        "\n"
+        "    def __init__(self,race):\n",
+        "        self.__race = race\n",
+        "    \n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
+        "print(toto_le_lion.get_race())\n",
+        "toto_le_lion.__race = 'Lion de la savane'\n",
+        "print(toto_le_lion.get_race()) #On ne peut pas modifier encore l'attribut privé"
       ],
-      "execution_count": 12,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1\n"
+            "Lion\n",
+            "Lion\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z64cB6IzFjYg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "703391d9-f836-4471-b8b5-c4e36b0f4a64"
+      },
+      "source": [
+        "## Bonne pratique (coucou Java) définir des setteurs: set_attribut(self,attribut)\n",
+        "class Animal:\n",
+        "    def __init__(self,race):\n",
+        "        self.__race = race\n",
+        "    \n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "    def set_race(self,nouvelle_race):\n",
+        "        self.__race = nouvelle_race\n",
+        "        return\n",
+        "\n",
+        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
+        "\n",
+        "print(toto_le_lion.get_race())\n",
+        "toto_le_lion.set_race('Lion de la savane')\n",
+        "\n",
+        "print(toto_le_lion.get_race())"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Lion\n",
+            "Lion de la savane\n"
           ],
           "name": "stdout"
         }
@@ -126,15 +186,153 @@
       "metadata": {
         "id": "rEClPl7I0znf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "cf10f64d-ab0c-4510-db9a-9998ece04461"
       },
       "source": [
         "# super().__init__(), issubclass(subclass,class) et isinstance(instance, class)\n",
+        "class Felin:\n",
+        "    nombre_de_patte = 4\n",
+        "    carnivore = True\n",
         "\n",
-        "\n"
+        "    def __init__(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "\n",
+        "    def get_race(self):\n",
+        "        return self.__couleur \n",
+        "\n",
+        "    def set_race(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "        return\n",
+        "\n",
+        "    def manger_viande(self):\n",
+        "        print('Je viens de manger de la viande')\n",
+        "\n",
+        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
+        "    def __init__(self,race,name,couleur):\n",
+        "        super().__init__(couleur)\n",
+        "        self.__race = race\n",
+        "        self.name = name\n",
+        "    \n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "    def set_race(self,nouvelle_race):\n",
+        "        self.__race = nouvelle_race\n",
+        "        return \n",
+        "\n",
+        "class Girafe:\n",
+        "    race = 'Girafe'\n",
+        "\n",
+        "gerard_le_lion = Lion('Lion de la savane', 'gerard','rouge') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "\n",
+        "print(gerard_le_lion.name, gerard_le_lion.get_race())\n",
+        "gerard_le_lion.manger_viande()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "gerard Lion de la savane\n",
+            "Je viens de manger de la viande\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aB3SWVmrPHIP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "451d000f-862d-400e-b833-5c855b0ecadb"
+      },
+      "source": [
+        "isinstance(gerard_le_lion, Lion)"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ayn6A7u4PNax",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "07f0281c-d571-49ad-c5d5-f14aabe93387"
+      },
+      "source": [
+        "issubclass(Lion,Felin)"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TkkLV4KLPXHk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "adda9792-b4d3-4ef7-e763-ac2285d677b0"
+      },
+      "source": [
+        "issubclass(Girafe,Felin)"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -151,14 +349,62 @@
       "metadata": {
         "id": "wHm0o4Wxt2FK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "80265689-039b-4d48-b0f9-c123deb6ba33"
       },
       "source": [
-        "## attributs de class (définir un attribut dans la class et pas dans le constructeur)\n",
-        "\n"
+        "class Felin:\n",
+        "    nombre_de_patte = 4 #CEST UN ATTRIBUT DE CLASSE\n",
+        "    carnivore = True #CEST UN ATTRIBUT DE CLASSE\n",
+        "\n",
+        "    def __init__(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "\n",
+        "    def get_race(self):\n",
+        "        return self.__couleur \n",
+        "\n",
+        "    def set_race(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "        return\n",
+        "\n",
+        "    def manger_viande(self):\n",
+        "        print('Je viens de manger de la viande')\n",
+        "\n",
+        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
+        "    def __init__(self,race,name,couleur):\n",
+        "        super().__init__(couleur)\n",
+        "        self.__race = race\n",
+        "        self.name = name\n",
+        "    \n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "    def set_race(self,nouvelle_race):\n",
+        "        self.__race = nouvelle_race\n",
+        "        return \n",
+        "\n",
+        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "hakim_le_lion = Lion('Lion des montagnes', 'hakim','marron') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "\n",
+        "print(gerard_le_lion.nombre_de_patte,hakim_le_lion.nombre_de_patte)\n",
+        "\n",
+        "Felin.nombre_de_patte = 3\n",
+        "print(gerard_le_lion.nombre_de_patte,hakim_le_lion.nombre_de_patte)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 4\n",
+            "3 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -173,7 +419,6 @@
         "\n",
         "class Person:\n",
         "    x = 0\n",
-        "    \n",
         "    def __init__(self):\n",
         "        pass\n",
         "\n",
@@ -316,13 +561,107 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qdqTLqedLYio",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "1dfdee9c-261e-4281-fd4a-0c864105d2e4"
+      },
+      "source": [
+        "class Felin:\n",
+        "    nombre_de_patte = 4 #CEST UN ATTRIBUT DE CLASSE\n",
+        "    carnivore = True #CEST UN ATTRIBUT DE CLASSE\n",
+        "    energie=100\n",
+        "\n",
+        "    def __init__(self,couleur): #CONSTRUCTEUR D'ATTRIBUT D'INSTANCE\n",
+        "        self.__couleur = couleur\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return 'je suis un Félin'\n",
+        "\n",
+        "    def get_race(self):\n",
+        "        return self.__couleur \n",
+        "\n",
+        "    def set_race(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "        return\n",
+        "\n",
+        "    def manger_viande(self):\n",
+        "        print('Je viens de manger de la viande')\n",
+        "    \n",
+        "    @classmethod\n",
+        "    def tout_les_felins_courent(cls):\n",
+        "        cls.energie = cls.energie - 10\n",
+        "    \n",
+        "    #@staticmethod\n",
+        "    def nombre_de_felins(nombre_de_lion, nombre_de_tigre):\n",
+        "        return nombre_de_lion+nombre_de_tigre\n",
+        "\n",
+        "    #1er méthode pour définir une méthode de class\n",
+        "    #tout_les_felins_courent = classmethod(tout_les_felins_courent) \n",
+        "\n",
+        "    #1er méthode pour définir une static méthod\n",
+        "    nombre_de_felins = staticmethod(nombre_de_felins) \n",
+        "\n",
+        "\n",
+        "\n",
+        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
+        "    def __init__(self,race,name,couleur):\n",
+        "        super().__init__(couleur)\n",
+        "        self.__race = race\n",
+        "        self.name = name\n",
+        "    \n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "    def set_race(self,nouvelle_race):\n",
+        "        self.__race = nouvelle_race\n",
+        "        return\n",
+        "\n",
+        "\n",
+        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "hakim_le_lion = Lion('Lion des montagnes', 'hakim','marron') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "\n",
+        "print(gerard_le_lion.energie,hakim_le_lion.energie)\n",
+        "print(Felin.energie)\n",
+        "\n",
+        "Felin.tout_les_felins_courent()\n",
+        "\n",
+        "print(gerard_le_lion.energie,hakim_le_lion.energie)\n",
+        "print(Felin.energie)\n",
+        "\n",
+        "print(Felin.nombre_de_felins(3, 2))\n",
+        "\n",
+        "print(gerard_le_lion)"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100 100\n",
+            "100\n",
+            "90 90\n",
+            "90\n",
+            "5\n",
+            "je suis un Félin\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "--M7-WJ1zUeN",
         "colab_type": "text"
       },
       "source": [
-        "# Fonction dir, attribut __dict__ "
+        "# Fonction dir, attribut __ dict __ "
       ]
     },
     {
@@ -330,31 +669,100 @@
       "metadata": {
         "id": "Mv6vgTovzvKS",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 615
+        },
+        "outputId": "ef00fd24-8a3f-409d-af55-4e2014a81911"
       },
       "source": [
-        "# Fonction dir (renvoi une lsite contenant les attributs et méthodes)\n",
+        "# Fonction dir (renvoi une liste contenant les attributs et méthodes)\n",
         "\n",
-        "\n"
+        "\n",
+        "dir(Felin)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__class__',\n",
+              " '__delattr__',\n",
+              " '__dict__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__le__',\n",
+              " '__lt__',\n",
+              " '__module__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " '__weakref__',\n",
+              " 'carnivore',\n",
+              " 'energie',\n",
+              " 'get_race',\n",
+              " 'manger_viande',\n",
+              " 'nombre_de_felins',\n",
+              " 'nombre_de_patte',\n",
+              " 'set_race',\n",
+              " 'tout_les_felins_courent']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "j_TIx6VJzzNR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "44a3de80-6545-4763-d44b-d3c1ef66300f"
       },
       "source": [
         " #attribut __dict__ (permet d'accéder aux attributs par un dictionnaire)\n",
         "\n",
-        "\n",
-        " "
+        "gerard_le_lion.__dict__\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'_Felin__couleur': 'beige',\n",
+              " '_Lion__race': 'Lion de la savane',\n",
+              " 'name': 'gerard'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
     },
     {
       "cell_type": "markdown",
